--- a/client/index.css
+++ b/client/index.css
@@ -1,3 +1,10 @@
+.personal-data{
+  text-align: right;
+  font-style: italic;
+  margin-right: 20px;
+  margin-top: 10px;
+}
+
 .ip-tracker {
     margin-left: 30px;
     margin-top: 30px;
